<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dzartek.myappportfollio.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.dzartek.myappportfollio.MainActivity"
        tools:showIn="@layout/activity_main">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/mainTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginBottom="22dp"/>

        <Button
            android:id="@+id/btnSpotifyStreamer"
            android:layout_below="@+id/textViewTitle"
            android:layout_centerHorizontal="true"
            android:background="@color/orange"
            android:text="@string/spotifystreamer"
            android:textColor="@color/colorPrimary"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/btnScoresApp"
            android:layout_alignLeft="@+id/btnSpotifyStreamer"
            android:layout_alignStart="@+id/btnSpotifyStreamer"
            android:layout_below="@+id/btnSpotifyStreamer"
            android:layout_marginTop="8dp"
            android:background="@color/orange"
            android:text="@string/scores_app"
            android:textColor="@color/colorPrimary"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/btnLibraryApp"
            android:layout_alignLeft="@id/btnScoresApp"
            android:layout_alignStart="@id/btnScoresApp"
            android:layout_below="@id/btnScoresApp"
            android:layout_marginTop="8dp"
            android:background="@color/orange"
            android:text="@string/library_app"
            android:textColor="@color/colorPrimary"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/btnBuildItBigger"
            android:layout_alignLeft="@+id/btnLibraryApp"
            android:layout_alignStart="@+id/btnLibraryApp"
            android:layout_below="@+id/btnLibraryApp"
            android:layout_marginTop="8dp"
            android:background="@color/orange"
            android:text="@string/build_it_bigger"
            android:textColor="@color/colorPrimary"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/btnXyzReader"
            android:layout_alignLeft="@+id/btnBuildItBigger"
            android:layout_alignStart="@+id/btnBuildItBigger"
            android:layout_below="@+id/btnBuildItBigger"
            android:layout_marginTop="8dp"
            android:background="@color/orange"
            android:text="@string/xyz_reader"
            android:textColor="@color/colorPrimary"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/btnCapstone"
            android:layout_alignLeft="@+id/btnBuildItBigger"
            android:layout_alignStart="@+id/btnBuildItBigger"
            android:layout_below="@+id/btnXyzReader"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:text="@string/capstone_my_app"
            android:textColor="@color/white"
            style="@style/ButtonStyle" />
    </RelativeLayout>
</ScrollView>